--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "xutl/yii2-bootstrap-markdown-widget",
   "description": "The bootstrap markdown extension for the Yii framework",
   "type": "yii2-extension",
-  "license": "BSD-3-Clause",
+  "license": "MIT",
   "keywords": [
     "bootstrap",
     "markdown",
@@ -16,7 +16,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "yiisoft/yii2": "*"
+    "yiisoft/yii2": "~2.0.6"
   },
   "autoload": {
     "psr-4": {
