--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "yiisoft/yii2": "~2.0.6"
+    "yiisoft/yii2": "~2.0.6",
+    "yiisoft/yii2-bootstrap": "~2.0.0"
   },
   "autoload": {
     "psr-4": {
